CIR-I2208 | machine rate variable alignment issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -8529,3 +8529,10 @@ padding-bottom: 3px;
   }
  }
 }
+.variable-cost {
+  .col-md-1 {
+    .inputbox.withBorder {
+      padding-top: 21px;
+    }
+  }
+}
